# aim-frontend

./: .env.example  .gitignore  README.md  dashboard.html  pyproject.toml  server.py
aim_central/: main.py
aim_central/driver/: __init__.py  can_driver.py  database_operations.py
aim_central/logic/: __init__.py  can_bridge.py  gps_fence.py
aim_central/shared/: __init__.py  config.py  events.py  logging.py
aim_central/view/: __init__.py  dashboard.css  dashboard.html  dashboard.js  flask_gui.py
scripts/: clean.py  install_service.sh  setup_env.py
